Part 1 finished. Proceeding to testing now
